--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -19,10 +19,13 @@
         </span>
 
         <ul class="navbar-list">
-          <li class="navbar-item"><a href="#News">News</a></li>
-          <li class="navbar-item"><a href="#Series">Series</a></li>
-          <li class="navbar-item"><a href="#Films">Films</a></li>
-          <li class="navbar-item"><a href="#Favourite">Favourite</a></li>
+          <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
+          <li class="navbar-item">
+            <a href="../pages/filmGrid.html">Films</a>
+          </li>
+          <li class="navbar-item">
+            <a href="../pages/filmGridFavourite.html">Favourite</a>
+          </li>
           <li class="navbar-item">
             <input class="search-input" type="text" name="" placeholder="Search" />
           </li>
