--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     <title>Rootdevs</title>
   </head>
+  <style>
+    h1{
+      font-size: 3em;
+      color: white;
+      margin-top: 2em;
+    }
+  </style>
   <body>
     <header class="header">
       <nav id="navbar" class="navbar">
@@ -41,117 +48,6 @@
     <main class="main">
       <div class="container">
         <h1>Probando navbar:</h1>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, blanditiis eum
-          reiciendis incidunt dolores quasi, minus quod nihil alias sed, enim esse
-          suscipit. Nostrum labore rem ad modi maiores beatae?
-        </p>
-      </div>
     </main>
   </body>
 </html>
