icomon footer y varios css grid...

--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -57,10 +57,36 @@
               fighting for the necessities of life.
             </q>
           </article>
+
+          <article class="article-description">
+            <h2>Inside Out (2015)</h2>
+            <p>Movie rating: Age +16</p>
+            <h3>Description:</h3>
+            <q>
+              An apocalyptic story set in the furthest reaches of our planet, in a stark
+              desert landscape where humanity is broken, and most everyone is crazed
+              fighting for the necessities of life.
+            </q>
+          </article>
         </div>
       </div>
 
-      <div class="item films-two">films-two</div>
+      <!-- Area films-two -->
+      <!-- <div class="item films-two">
+        <div class="container">
+          <article class="article-description">
+            <h2>Inside Out (2015)</h2>
+            <p>Movie rating: Age +16</p>
+            <h3>Description:</h3>
+            <q>
+              An apocalyptic story set in the furthest reaches of our planet, in a stark
+              desert landscape where humanity is broken, and most everyone is crazed
+              fighting for the necessities of life.
+            </q>
+          </article>
+        </div>
+      </div> -->
+
       <div class="item footer">footer</div>
     </section>
   </body>
