--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -40,30 +40,28 @@
     </header>
 
     <section class="section-gridfilms">
-      <div class="container-gridfilms">
-        <h1 class="section-title">Films:</h1>
-      </div>
+      <h1 class="section-title">Films:</h1>
+
       <div class="container-gridfilms">
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+            </figure>
+
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  Futurama: The Beast with a Billion Backs (2008)
-                </span>
-                <span class="comments-age">Movie rating: Age +16</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  Fresh off ripping space-time a new one at the end of "Bender's Big
-                  Score," the Planet Express crew...
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                Futurama: The Beast with a Billion Backs (2008)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <q class="comments-synopsis">
+                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
+                the Planet Express crew...
+              </q>
+            </div>
+          </article>
         </a>
 
         <a href="#" class="gridfilms">
