--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -14,6 +14,7 @@
   <body>
     <section class="container">
       <div class="item header">
+        <!-- Area header -->
         <header class="header">
           <nav id="navbar" class="navbar">
             <span class="logo">
