toqueteando footer provisional...

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -46,9 +46,21 @@
     </div>
 
     <footer class="footer">
-      <a href="https://rootdevs.es/">
-        <i class="icon-code"></i>
-      </a>
+      <div class="container-footer">
+        <p>Got feedback?, This web is open source!.</p>
+        <p>
+          Exercise for learn Html5 & CSS3 by
+          <a href="https://keepcoding.io/">
+            <strong>Keepcoding!</strong>
+          </a>
+        </p>
+        <p>
+          Made with <i class="i-color-l">code &lt;/&gt; & ❤️</i> by
+          <a href="https://github.com/anbreaker">
+            <i class="i-color">anbreaker</i>
+          </a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
