pagina de favoritos refactorizada, iniciando parte del video

--- a/pages/filmGridFavourite.html
+++ b/pages/filmGridFavourite.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
-    <title>Films Grid</title>
+    <title>Films Favourite</title>
   </head>
   <body>
     <header class="header">
@@ -38,122 +38,116 @@
         </ul>
       </nav>
     </header>
+
     <section class="section-gridfilms">
+      <h1 class="section-title">Films:</h1>
+      <hr />
+
       <div class="container-gridfilms">
-        <h1 class="section-title">Films:</h1>
-      </div>
-      <div class="container-gridfilms">
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+            </figure>
+
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  Futurama: The Beast with a Billion Backs (2008)
-                </span>
-                <span class="comments-age">Movie rating: Age +16</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  Fresh off ripping space-time a new one at the end of "Bender's Big
-                  Score," the Planet Express crew...
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                Inside Out (2015)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <q class="comments-synopsis">
+                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
+                the Planet Express crew...
+              </q>
+            </div>
+          </article>
         </a>
 
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+            </figure>
+
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  Star Wars Episode IV A New Hope(1977)
-                </span>
-                <span class="comments-age">Movie rating: Age +16</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  Princess Leia is captured and held hostage by the evil Imperial forces
-                  in their effort to take over the galactic Empire...
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                Star Wars Episode IV A New Hope(1977)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <p class="comments-synopsis">
+                Princess Leia is captured and held hostage by the evil Imperial forces in
+                their effort to take over the galactic Empire...
+              </p>
+            </div>
+          </article>
         </a>
 
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
+            </figure>
+
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  The Pursuit of Happyness (2006)
-                </span>
-                <span class="comments-age">Movie rating: Age +16</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  Based on a true story about a man named Christopher Gardner, who has
-                  invested heavily in a device known as a "Bone Density scanner"...
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                The Pursuit of Happyness (2006)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <p class="comments-synopsis">
+                Based on a true story about a man named Christopher Gardner, who has
+                invested heavily in a device known as a "Bone Density scanner"...
+              </p>
+            </div>
+          </article>
         </a>
 
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
+            </figure>
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  Pulp Fiction (1994)
-                </span>
-                <span class="comments-age">Movie rating: Age +18</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  A burger-loving hit man, his philosophical partner, a drug-addled
-                  gangster's moll and a washed-up boxer converge in this sprawling,
-                  comedic crime caper. Their adventures unfurl in three stories that
-                  ingeniously trip back and forth in time.
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                Pulp Fiction (1994)
+              </h1>
+              <p class="comments-age">Movie rating: Age +18</p>
+              <h2 class="comments-description">Description:</h2>
+              <q class="comments-synopsis">
+                A burger-loving hit man, his philosophical partner, a drug-addled
+                gangster's moll and a washed-up boxer converge in this sprawling, comedic
+                crime caper. Their adventures unfurl in three stories that ingeniously
+                trip back and forth in time.
+              </q>
+            </div>
+          </article>
         </a>
 
         <a href="#" class="gridfilms">
-          <figure class="gridfilms-image">
-            <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
-          </figure>
-          <span class="gridfilms-description">
-            <p>
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
+            </figure>
+            <div class="gridfilms-description">
               <span class="gridfilms-fav">✔️</span>
-              <span class="gridfilms-comments">
-                <span class="comments-title">
-                  Rocky (1976)
-                </span>
-                <span class="comments-age">Movie rating: Age +16</span>
-                <span class="comments-description">Description:</span>
-                <span class="comments-synopsis">
-                  When world heavyweight boxing champ Apollo Creed wants to give an
-                  unknown fighter a shot at the title as a publicity stunt, his handlers
-                  pick palooka Rocky Balboa, an uneducated collector...
-                </span>
-              </span>
-            </p>
-          </span>
+              <h1 class="comments-title">
+                Rocky (1976)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <q class="comments-synopsis">
+                When world heavyweight boxing champ Apollo Creed wants to give an unknown
+                fighter a shot at the title as a publicity stunt, his handlers pick
+                palooka Rocky Balboa, an uneducated collector...
+              </q>
+            </div>
+          </article>
         </a>
       </div>
     </section>
