muchos cambios... arrrgh!

--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
+    <link rel="stylesheet" href="../css/mediaQueries.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films Grid</title>
   </head>
@@ -51,7 +53,7 @@
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 Futurama: The Beast with a Billion Backs (2008)
               </h1>
@@ -68,54 +70,11 @@
         <a href="#" class="gridfilms">
           <article>
             <figure class="gridfilms-image">
-              <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
-            </figure>
-
-            <div class="gridfilms-description">
-              <span class="gridfilms-fav">✅</span>
-              <h1 class="comments-title">
-                Batman Beyond: Return of the Joker (2000)
-              </h1>
-              <p class="comments-age">Movie rating: Age +8</p>
-              <h2 class="comments-description">Description:</h2>
-              <p class="comments-synopsis">
-                The Joker is back with a vengeance, and Gotham's newest Dark Knight needs
-                answers as he stands alone to face Gotham's most infamous Clown Prince of
-                Crime.
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="gridfilms">
-          <article>
-            <figure class="gridfilms-image">
-              <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
-            </figure>
-
-            <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
-              <h1 class="comments-title">
-                Star Wars Episode IV A New Hope(1977)
-              </h1>
-              <p class="comments-age">Movie rating: Age +16</p>
-              <h2 class="comments-description">Description:</h2>
-              <p class="comments-synopsis">
-                Princess Leia is captured and held hostage by the evil Imperial forces in
-                their effort to take over the galactic Empire...
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="gridfilms">
-          <article>
-            <figure class="gridfilms-image">
               <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 The Pursuit of Happyness (2006)
               </h1>
@@ -136,7 +95,7 @@
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✅</span>
+              <i class="gridfilms-fav ico-star-empty"></i>
               <h1 class="comments-title">
                 Harry Potter and the Philosopher's Stone (2001)
               </h1>
@@ -155,10 +114,53 @@
         <a href="#" class="gridfilms">
           <article>
             <figure class="gridfilms-image">
+              <img src="../img/films/starWars.jpg" alt="Picture of Star Wars" />
+            </figure>
+
+            <div class="gridfilms-description">
+              <i class="gridfilms-fav ico-star-full"></i>
+              <h1 class="comments-title">
+                Star Wars Episode IV A New Hope(1977)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <p class="comments-synopsis">
+                Princess Leia is captured and held hostage by the evil Imperial forces in
+                their effort to take over the galactic Empire...
+              </p>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="gridfilms">
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/batmanBeyond.jpg" alt="Picture of Batman" />
+            </figure>
+
+            <div class="gridfilms-description">
+              <i class="gridfilms-fav ico-star-empty"></i>
+              <h1 class="comments-title">
+                Batman Beyond: Return of the Joker (2000)
+              </h1>
+              <p class="comments-age">Movie rating: Age +8</p>
+              <h2 class="comments-description">Description:</h2>
+              <p class="comments-synopsis">
+                The Joker is back with a vengeance, and Gotham's newest Dark Knight needs
+                answers as he stands alone to face Gotham's most infamous Clown Prince of
+                Crime.
+              </p>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="gridfilms">
+          <article>
+            <figure class="gridfilms-image">
               <img src="../img/films/reservoirDogs.jpg" alt="Picture of Reservoir Dogs" />
             </figure>
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✅</span>
+              <i class="gridfilms-fav ico-star-empty"></i>
               <h1 class="comments-title">
                 Reservoir Dogs (1992)
               </h1>
@@ -178,7 +180,7 @@
               <img src="../img/films/theWolf.jpg" alt="Picture of The Wolf" />
             </figure>
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✅</span>
+              <i class="gridfilms-fav ico-star-empty"></i>
               <h1 class="comments-title">
                 The Wolf of Wall Street (2013)
               </h1>
@@ -199,7 +201,7 @@
               <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
             </figure>
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 Pulp Fiction (1994)
               </h1>
@@ -221,7 +223,7 @@
               <img src="../img/films/eliBook.jpg" alt="Picture of The Book of Eli" />
             </figure>
             <div class="gridfilms-description">
-              <h1 class="gridfilms-fav">✅</h1>
+              <i class="gridfilms-fav ico-star-empty"></i>
               <h1 class="comments-title">
                 The Book of Eli (2010)
               </h1>
@@ -242,7 +244,7 @@
               <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
             </figure>
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 Rocky (1976)
               </h1>
