--- a/pages/filmTrailerMadMax.html
+++ b/pages/filmTrailerMadMax.html
@@ -42,7 +42,7 @@
 
     <h1>Video</h1>
     <div class="container-video">
-      <video class="video" src="../video/inside.mp4" controls></video>
+      <video class="video" src="../video/madMax.mp4" controls></video>
     </div>
 
     <footer class="footer">
