--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films News</title>
   </head>
@@ -44,14 +45,19 @@
       <hr />
 
       <div class="container-gridfilms">
-        <a href="#" class="gridfilms">
+        <a
+          href="../pages/filmTrailerInside.html"
+          class="gridfilms"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
           <article>
             <figure class="gridfilms-image">
               <img src="../img/films/inside.jpg" alt="Picture of Futurama" />
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="icon-play"></i>
               <h1 class="comments-title">
                 Inside Out (2015)
               </h1>
@@ -67,7 +73,12 @@
           </article>
         </a>
 
-        <a href="#" class="gridfilms">
+        <a
+          href="../pages/filmTrailerMadMax.html"
+          class="gridfilms"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
           <article>
             <figure class="gridfilms-image">
               <img src="../img/films/madMaxNew.jpg" alt="Picture of Star Wars" />
