--- a/pages/filmTrailerInside.html
+++ b/pages/filmTrailerInside.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/filmTrailer.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Navbar</title>
