usando css con mismo nombre al fichero

--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
-    <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/filmGridNews.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films News</title>
@@ -57,7 +57,6 @@
             </figure>
 
             <div class="gridfilms-description">
-              <i class="icon-play"></i>
               <h1 class="comments-title">
                 Inside Out (2015)
               </h1>
@@ -69,6 +68,7 @@
                 Francisco. Like all of us, Riley is guided by her emotions - Joy, Fear,
                 Anger, Disgust and Sadness....
               </q>
+              <i class="ico-play"></i>
             </div>
           </article>
         </a>
@@ -85,7 +85,6 @@
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
               <h1 class="comments-title">
                 Mad Max: Fury Road (2015)
               </h1>
@@ -96,6 +95,7 @@
                 desert landscape where humanity is broken, and most everyone is crazed
                 fighting for the necessities of life...
               </p>
+              <i class="ico-play"></i>
             </div>
           </article>
         </a>
