cambios menores de css y refactorizacion

--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -51,9 +51,9 @@
           target="_blank"
           rel="noreferrer noopener"
         >
-          <article>
+          <article class="gridfilms-ariticle">
             <figure class="gridfilms-image">
-              <img src="../img/films/inside.jpg" alt="Picture of Futurama" />
+              <img src="../img/films/inside.jpg" alt="Picture of Inside Out" />
             </figure>
 
             <div class="gridfilms-description">
@@ -65,10 +65,10 @@
               <q class="comments-synopsis">
                 Growing up can be a bumpy road, and it's no exception for Riley, who is
                 uprooted from her Midwest life when her father starts a new job in San
-                Francisco. Like all of us, Riley is guided by her emotions - Joy, Fear,
-                Anger, Disgust and Sadness....
+                Francisco. Riley is guided by her emotions - Joy, Fear, Anger, Disgust and
+                Sadness...
               </q>
-              <i class="ico-play"></i>
+              <i class="ico-play gridfilms-play"></i>
             </div>
           </article>
         </a>
@@ -81,7 +81,7 @@
         >
           <article>
             <figure class="gridfilms-image">
-              <img src="../img/films/madMaxNew.jpg" alt="Picture of Star Wars" />
+              <img src="../img/films/madMaxNew.jpg" alt="Picture of Mad Max Fury Road" />
             </figure>
 
             <div class="gridfilms-description">
@@ -95,7 +95,7 @@
                 desert landscape where humanity is broken, and most everyone is crazed
                 fighting for the necessities of life...
               </p>
-              <i class="ico-play"></i>
+              <i class="ico-play gridfilms-play"></i>
             </div>
           </article>
         </a>
