--- a/pages/filmGridFavourite.html
+++ b/pages/filmGridFavourite.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films Favourite</title>
   </head>
@@ -47,19 +48,19 @@
         <a href="#" class="gridfilms">
           <article>
             <figure class="gridfilms-image">
-              <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+              <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
             </figure>
-
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
-                Inside Out (2015)
+                Rocky (1976)
               </h1>
               <p class="comments-age">Movie rating: Age +16</p>
               <h2 class="comments-description">Description:</h2>
               <q class="comments-synopsis">
-                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
-                the Planet Express crew...
+                When world heavyweight boxing champ Apollo Creed wants to give an unknown
+                fighter a shot at the title as a publicity stunt, his handlers pick
+                palooka Rocky Balboa, an uneducated collector...
               </q>
             </div>
           </article>
@@ -72,7 +73,7 @@
             </figure>
 
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 Star Wars Episode IV A New Hope(1977)
               </h1>
@@ -89,31 +90,10 @@
         <a href="#" class="gridfilms">
           <article>
             <figure class="gridfilms-image">
-              <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
-            </figure>
-
-            <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
-              <h1 class="comments-title">
-                The Pursuit of Happyness (2006)
-              </h1>
-              <p class="comments-age">Movie rating: Age +16</p>
-              <h2 class="comments-description">Description:</h2>
-              <p class="comments-synopsis">
-                Based on a true story about a man named Christopher Gardner, who has
-                invested heavily in a device known as a "Bone Density scanner"...
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="gridfilms">
-          <article>
-            <figure class="gridfilms-image">
               <img src="../img/films/pulpFiction.jpg" alt="Picture of Pulp Fiction" />
             </figure>
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
                 Pulp Fiction (1994)
               </h1>
@@ -132,19 +112,40 @@
         <a href="#" class="gridfilms">
           <article>
             <figure class="gridfilms-image">
-              <img src="../img/films/rocky.jpg" alt="Picture of Rocky" />
+              <img src="../img/films/thePursuit.jpg" alt="Picture of The Pursuit" />
             </figure>
+
             <div class="gridfilms-description">
-              <span class="gridfilms-fav">✔️</span>
+              <i class="gridfilms-fav ico-star-full"></i>
               <h1 class="comments-title">
-                Rocky (1976)
+                The Pursuit of Happyness (2006)
+              </h1>
+              <p class="comments-age">Movie rating: Age +16</p>
+              <h2 class="comments-description">Description:</h2>
+              <p class="comments-synopsis">
+                Based on a true story about a man named Christopher Gardner, who has
+                invested heavily in a device known as a "Bone Density scanner"...
+              </p>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="gridfilms">
+          <article>
+            <figure class="gridfilms-image">
+              <img src="../img/films/futurama.jpg" alt="Picture of Futurama" />
+            </figure>
+
+            <div class="gridfilms-description">
+              <i class="gridfilms-fav ico-star-full"></i>
+              <h1 class="comments-title">
+                Inside Out (2015)
               </h1>
               <p class="comments-age">Movie rating: Age +16</p>
               <h2 class="comments-description">Description:</h2>
               <q class="comments-synopsis">
-                When world heavyweight boxing champ Apollo Creed wants to give an unknown
-                fighter a shot at the title as a publicity stunt, his handlers pick
-                palooka Rocky Balboa, an uneducated collector...
+                Fresh off ripping space-time a new one at the end of "Bender's Big Score,"
+                the Planet Express crew...
               </q>
             </div>
           </article>
