icono oculot en navbar, iniciando medias...

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- <link rel="stylesheet" href="../css/navbar-flex.css" /> -->
     <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Navbar</title>
   </head>
@@ -17,8 +19,12 @@
             <img class="logo-img" src="../img/logo.svg" alt="Logo" />
           </a>
         </span>
+        <!-- <div class="burguer-label"></div> -->
 
         <ul class="navbar-list">
+          <li class="navbar-item">
+            <a href="#search" class="search-icon"><i class="ico-search"></i></a>
+          </li>
           <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
           <li class="navbar-item">
             <a href="../pages/filmGrid.html">Films</a>
@@ -27,7 +33,13 @@
             <a href="../pages/filmGridFavourite.html">Favourite</a>
           </li>
           <li class="navbar-item">
-            <input class="search-input" type="text" name="" placeholder="Search" />
+            <input
+              id="search"
+              class="search-input"
+              type="search"
+              name=""
+              placeholder="Search"
+            />
           </li>
           <li class="navbar-item">
             <a href="../pages/pageNotFound.html">
