--- a/pages/filmGridFavourite.html
+++ b/pages/filmGridFavourite.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
+    <link rel="stylesheet" href="../css/mediaQueries.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films Favourite</title>
