--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -18,6 +18,7 @@
           <i class="ico-menu" id="open-menu"></i>
           <i class="ico-cross" id="close-menu"></i>
         </label>
+        <a href="#"><h1>rootdevs</h1></a>
         <span class="logo">
           <a href="/">
             <img class="logo-img" src="../img/logo.svg" alt="Logo" />
@@ -25,18 +26,12 @@
         </span>
 
         <ul class="navbar-list">
-          <li class="navbar-item">
-            <a href="#search" class="search-icon"><i class="ico-search"></i></a>
-          </li>
           <li class="navbar-item"><a href="../pages/filmGridNews.html">News</a></li>
           <li class="navbar-item">
             <a href="../pages/filmGrid.html">Films</a>
           </li>
           <li class="navbar-item">
             <a href="../pages/filmGridFavourite.html">Favourite</a>
-          </li>
-          <li class="navbar-item">
-            <a href="#search"><i class="ico-search"></i></a>
           </li>
           <li class="navbar-item">
             <input id="search" class="search-input" type="search" placeholder="Search" />
