cambios margenes card

--- a/pages/filmGridNews.html
+++ b/pages/filmGridNews.html
@@ -69,10 +69,9 @@
               <p class="comments-age">Movie rating: Age +1</p>
               <h2 class="comments-description">Description:</h2>
               <q class="comments-synopsis">
-                Growing up can be a bumpy road, and it's no exception for Riley, who is
-                uprooted from her Midwest life when her father starts a new job in San
-                Francisco. Riley is guided by her emotions - Joy, Fear, Anger, Disgust and
-                Sadness...
+                Riley, uprooted from her Midwest life, when her father starts a new job in
+                San Francisco. Riley is guided by her emotions - Joy, Fear, Anger, Disgust
+                and Sadness...
               </q>
               <i class="ico-play gridfilms-play"></i>
             </div>
