--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -108,10 +108,9 @@
               <p class="comments-age">Movie rating: Age +8</p>
               <h2 class="comments-description">Description:</h2>
               <q class="comments-synopsis">
-                Harry Potter has lived under the stairs at his aunt and uncle's house his
-                whole life. But on his 11th birthday, he learns he's a powerful wizard --
-                with a place waiting for him at the Hogwarts School of Witchcraft and
-                Wizardry...
+                Harry Potter has lived under the stairs at his uncle's house. But on his
+                11th birthday, he learns he's a powerful wizard with a place waiting for
+                him at the Hogwarts School...
               </q>
             </div>
           </article>
