salvando los trastos...

--- a/pages/filmGrid.html
+++ b/pages/filmGrid.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/filmGrid.css" />
     <link rel="stylesheet" href="../css/icomoon.css" />
-    <link rel="stylesheet" href="../css/mediaQueries.css" />
     <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <title>Films Grid</title>
   </head>
@@ -36,7 +35,14 @@
             <a href="../pages/filmGridFavourite.html">Favourite</a>
           </li>
           <li class="navbar-item">
-            <input id="search" class="search-input" type="search" placeholder="Search" />
+            <a>
+              <input
+                id="search"
+                class="search-input"
+                type="search"
+                placeholder="Search"
+              />
+            </a>
           </li>
           <li class="navbar-item">
             <a href="../pages/pageNotFound.html">
